test/negative/t38.mli.expected

*******************************
********** Parsed file ********
*******************************
type 'a t1 = {
  x: int ;
  y: 'a }
type ('a, 'b) t2 = 'a t1
[@@@gospel
  {| function f (x: 'a t1): ('b,int) t2 =
    match x with
    | {x;y} -> {x;y} |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

type 'a t1 = {
x: int ;
y: 'a }
  

type ('a, 'b) t2 = 'a t1
  

(*@ function f ... *)
File "t38.mli", line 15, characters 4-37:
Error: This term has type `'a t1' but a term was expected of type `'b t1'.
